--- a/Project/package.json
+++ b/Project/package.json
@@ -2,13 +2,11 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
-    
     "engines": {
-    "npm": ">=7.20.6",
-    "node": ">=16.13.1"
+        "node": "7.x",
+        "npm": "16.x"
     },
-    
+    "main": "index.js",    
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "server": "nodemon server.js",
