--- a/Project/package.json
+++ b/Project/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "engines": {
-        "node": "16.x",
-        "npm": "7.x"
+        "node": "16.13.1",
+        "npm": "7.20.6"
     },
     "main": "index.js",    
     "scripts": {
